<resources>
    <string name="app_name">20 Pullups Challenge</string>
    <string name="app_intro">App intro</string>


    /// Layout day workout
    <string name="week_number">Week %s</string>
    <string name="week_number_placeholder">Week x</string>
    <string name="day_number_placeholder">Day x</string>
    <string name="day_number">Day %1$i</string>
    <string name="zero_placeholder">0</string>

    /// Workout activity kt
    <string name="done">Done</string>
    <string name="skip_rest">Skip rest</string>
    <string name="workout_complete_great">Great!</string>
    /// Workout activity layout
    <string name="week_x_of_y_placeholder">Week x of y</string>
    <string name="week_x_of_y">Week %1$s of %2$s</string>
    <string name="day_x_of_y_placeholder">Day x of y</string>
    <string name="day_x_of_y">Day %1$s of %2$s</string>
    <string name="start_workout_btn">Start workout</string>
    <string name="cancel_btn">Cancel</string>

    /// Activity create plan
    <string name="app_icon">App icon</string>
    <string name="app_name_all_caps">20 PULLUPS CHALLENGE</string>
    <string name="bckg_blue">Bckg blue</string>
    <string name="create_plan_title">Create your personalized workout</string>
    <string name="create_plan_btn">Create plan</string>
    <string name="pullups_question">How many pullups can you do in a row now? (minimum of 3)</string>

    /// Main activity
    <string name="create_pers_workout">Create your personalized workout</string>
    <string name="lets_go_btn">LETS GO</string>
    <string name="your_personalized_training_plan">Your personalized training plan</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="start_next_workout_btn">Start next workout</string>
    <string name="options_btn">Options</string>
    <string name="disclaimer_btn">Disclaimer</string>
    <string name="create_new_plan">Create new plan</string>

    /// Layout workout complete
    <string name="complete_tick_img">Complete tick img</string>
    <string name="challenge_completed_today">Challenge\ncompleted\ntoday</string>
    <string name="pullups_achieved_placeholder">You achieved a total of x pullups</string>
    <string name="pullups_achieved">You achieved a total of %1$s pullups</string>
    <string name="good_job">Good job!</string>

    /// Layout workout rest
    <string name="set">Set</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="plan">Plan</string>
    <string name="dash">-</string>
    <string name="achieved">Achieved</string>
    <string name="set_placeholder">Set x</string>
    <string name="set_number">Set %1$s</string>
    <string name="hundredtwenty">120</string>
    <string name="seconds_rest">seconds rest</string>
    <string name="next_placeholder">Next: this</string>
    <string name="next">Next: %1$s</string>

    /// Layout workout set
    <string name="pullups">pullups</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    /// Layout workout welcome
    <string name="zero_pullups_placeholder">0 pullups</string>
    <string name="pullups_plan">%1$s pullups</string>
    <string name="rest">Rest</string>
    <string name="rest_time">120 sec.</string>

    /// Slide one
    <string name="hello_img">hello img</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_message">You are here because you want to improve your pullup game. This app will create a custom program for you to be able to do 20 pullups. You should be able to do 3 pullups in a row to begin the program.</string>
    <string name="welcome_message_continuation">The program will take about 6 weeks.</string>

    /// Slide two
    <string name="arm_img">arm img</string>
    <string name="initial_test">Initial test</string>
    <string name="initial_test_message">In order to setup your training plan, we need to know what is the maximum number of pullups that you can do right now.</string>
    <string name="initial_test_continuation">Go to the pullup bar and do your best!</string>
    <string name="lets_do_this">Lets do this</string>

    /// Plan adapter
    <string name="week_adapter">W%1$s</string>
    <string name="day_adapter">Day %1$i</string>

    // Test activity
    <string name="test_main_text_placedholder">You\'ve completed x weeks of the plan, congratulations! Now it\'s time to test your maximum.</string>
    <string name="test_main_text">You\'ve completed %s weeks of the plan, congratulations! Now it\'s time to test your maximum.</string>
    <string name="test_rest">Take two days off, get plenty of rest, eat and drink right. Now you should be able to do at least 9 pullups.</string>
    <string name="start_test">Start test</string>
    <string name="test_time">Test time</string>
    <string name="clipboard_image_descript">Clipboard image</string>
    <string name="pullup_question">How many pullups can you do in a row now?</string>
    <string name="congratulation">Congratulations!</string>
    <string name="congratulation_text">You did a great job these past 3 weeks! You are ready to continue to the next 3 weeks. You are on track to achieve 20 pullups by the end of the program.</string>
    <string name="good_job_test">Good job</string>
    <string name="good_job_test_text">You did a good job these past 3 weeks but by now you should have been able to do 9 pullups. Not to worry, with a little bit of more hard work you will get there. Just repeat this past week, and retry the test.</string>

    // End test activity
    <string name="end_test_main_text_placedholder">You\'ve completed x weeks of the plan, congratulations! Now it\'s time to test your maximum.</string>
    <string name="end_test_main_text">You\'ve completed %s weeks of the plan, congratulations! Now it\'s time to test your maximum.</string>
    <string name="end_test_rest">Take two days off, get plenty of rest, eat and drink right. Now you should be able to do 20 pullups!</string>
    <string name="congratulation_final_text_placeholder">You did a great job these past X weeks! Unfortunately you haven\'t been able to do 20 pullups just yet. Not to worry! Let\'s just repeat the past week and try again.</string>
    <string name="congratulation_final_text">You did a great job these past %s weeks! Unfortunately you haven\'t been able to do 20 pullups just yet. Not to worry! Let\'s just repeat the past week and try again.</string>
    <string name="good_job_final_test_text_placeholder">You did a good job these past X weeks but by now you should have been able to be closer to 20 pullups. Not to worry, with a little bit of more hard work you will get there. Just repeat this past two weeks, and retry the test.</string>
    <string name="good_job_final_test_text">You did a good job these past %s weeks but by now you should have been able to be closer to 20 pullups. Not to worry, with a little bit of more hard work you will get there. Just repeat this past two weeks, and retry the test.</string>

    // Challenge completed activity
    <string name="challenge_complete_image_descript">Challenge complete image descript</string>
    <string name="congratulations_final">Congratulations</string>
    <string name="finished_challenged">You have finished the 20 Pullups Challenge!</string>
    <string name="challenge_finished_long">Your improvement during the program was noticeable and you\'ve achieved the ultimate goal. Now it\'s time to set your eyes on the next challenge. Are you up to the 100 pullups challenge?</string>

</resources>
